@@ -8,6 +8,7 @@
 	- Added 'select' all to wishlist and moved 'select all' down on notifies
 	- Added char/tag/trait stats to database statistics box
 	- Update traits_chars cache daily using Multi::Maintenance
+	- Toggle [spoiler] tag visibility with global setting rather than mouse-over
 	- Bugfix: don't accidentally remove char traits when editing
 	- Bugfix: fixed possible SQL table name clash on history browser
 	- Bugfix: properly announce chars and traits in Multi::IRC
